jpdfium/src/main/java/stirling/software/jpdfium/panama/JpdfiumH.java


    /**
     * {@snippet lang=c :
     * int32_t jpdfium_doc_open(const char *path, int64_t *handle)
     * }
     */
    public static int jpdfium_doc_open(MemorySegment path, MemorySegment handle) {
        var mh$ = jpdfium_doc_open.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_doc_open", path, handle);
            }
            return (int)mh$.invokeExact(path, handle);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_doc_open_bytes {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_POINTER,
            JpdfiumH.C_LONG,
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_doc_open_bytes");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_doc_open_bytes(const uint8_t *data, int64_t len, int64_t *handle)
     * }
     */
    public static FunctionDescriptor jpdfium_doc_open_bytes$descriptor() {
        return jpdfium_doc_open_bytes.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_doc_open_bytes(const uint8_t *data, int64_t len, int64_t *handle)
     * }
     */
    public static MethodHandle jpdfium_doc_open_bytes$handle() {
        return jpdfium_doc_open_bytes.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_doc_open_bytes(const uint8_t *data, int64_t len, int64_t *handle)
     * }
     */
    public static MemorySegment jpdfium_doc_open_bytes$address() {
        return jpdfium_doc_open_bytes.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_doc_open_bytes(const uint8_t *data, int64_t len, int64_t *handle)
     * }
     */
    public static int jpdfium_doc_open_bytes(MemorySegment data, long len, MemorySegment handle) {
        var mh$ = jpdfium_doc_open_bytes.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_doc_open_bytes", data, len, handle);
            }
            return (int)mh$.invokeExact(data, len, handle);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_doc_open_protected {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_POINTER,
            JpdfiumH.C_POINTER,
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_doc_open_protected");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_doc_open_protected(const char *path, const char *password, int64_t *handle)
     * }
     */
    public static FunctionDescriptor jpdfium_doc_open_protected$descriptor() {
        return jpdfium_doc_open_protected.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_doc_open_protected(const char *path, const char *password, int64_t *handle)
     * }
     */
    public static MethodHandle jpdfium_doc_open_protected$handle() {
        return jpdfium_doc_open_protected.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_doc_open_protected(const char *path, const char *password, int64_t *handle)
     * }
     */
    public static MemorySegment jpdfium_doc_open_protected$address() {
        return jpdfium_doc_open_protected.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_doc_open_protected(const char *path, const char *password, int64_t *handle)
     * }
     */
    public static int jpdfium_doc_open_protected(MemorySegment path, MemorySegment password, MemorySegment handle) {
        var mh$ = jpdfium_doc_open_protected.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_doc_open_protected", path, password, handle);
            }
            return (int)mh$.invokeExact(path, password, handle);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_doc_page_count {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG,
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_doc_page_count");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_doc_page_count(int64_t doc, int32_t *count)
     * }
     */
    public static FunctionDescriptor jpdfium_doc_page_count$descriptor() {
        return jpdfium_doc_page_count.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_doc_page_count(int64_t doc, int32_t *count)
     * }
     */
    public static MethodHandle jpdfium_doc_page_count$handle() {
        return jpdfium_doc_page_count.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_doc_page_count(int64_t doc, int32_t *count)
     * }
     */
    public static MemorySegment jpdfium_doc_page_count$address() {
        return jpdfium_doc_page_count.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_doc_page_count(int64_t doc, int32_t *count)
     * }
     */
    public static int jpdfium_doc_page_count(long doc, MemorySegment count) {
        var mh$ = jpdfium_doc_page_count.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_doc_page_count", doc, count);
            }
            return (int)mh$.invokeExact(doc, count);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_doc_save {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG,
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_doc_save");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_doc_save(int64_t doc, const char *path)
     * }
     */
    public static FunctionDescriptor jpdfium_doc_save$descriptor() {
        return jpdfium_doc_save.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_doc_save(int64_t doc, const char *path)
     * }
     */
    public static MethodHandle jpdfium_doc_save$handle() {
        return jpdfium_doc_save.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_doc_save(int64_t doc, const char *path)
     * }
     */
    public static MemorySegment jpdfium_doc_save$address() {
        return jpdfium_doc_save.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_doc_save(int64_t doc, const char *path)
     * }
     */
    public static int jpdfium_doc_save(long doc, MemorySegment path) {
        var mh$ = jpdfium_doc_save.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_doc_save", doc, path);
            }
            return (int)mh$.invokeExact(doc, path);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_doc_save_bytes {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG,
            JpdfiumH.C_POINTER,
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_doc_save_bytes");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_doc_save_bytes(int64_t doc, uint8_t **data, int64_t *len)
     * }
     */
    public static FunctionDescriptor jpdfium_doc_save_bytes$descriptor() {
        return jpdfium_doc_save_bytes.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_doc_save_bytes(int64_t doc, uint8_t **data, int64_t *len)
     * }
     */
    public static MethodHandle jpdfium_doc_save_bytes$handle() {
        return jpdfium_doc_save_bytes.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_doc_save_bytes(int64_t doc, uint8_t **data, int64_t *len)
     * }
     */
    public static MemorySegment jpdfium_doc_save_bytes$address() {
        return jpdfium_doc_save_bytes.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_doc_save_bytes(int64_t doc, uint8_t **data, int64_t *len)
     * }
     */
    public static int jpdfium_doc_save_bytes(long doc, MemorySegment data, MemorySegment len) {
        var mh$ = jpdfium_doc_save_bytes.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_doc_save_bytes", doc, data, len);
            }
            return (int)mh$.invokeExact(doc, data, len);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_doc_close {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            JpdfiumH.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_doc_close");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void jpdfium_doc_close(int64_t doc)
     * }
     */
    public static FunctionDescriptor jpdfium_doc_close$descriptor() {
        return jpdfium_doc_close.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void jpdfium_doc_close(int64_t doc)
     * }
     */
    public static MethodHandle jpdfium_doc_close$handle() {
        return jpdfium_doc_close.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void jpdfium_doc_close(int64_t doc)
     * }
     */
    public static MemorySegment jpdfium_doc_close$address() {
        return jpdfium_doc_close.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void jpdfium_doc_close(int64_t doc)
     * }
     */
    public static void jpdfium_doc_close(long doc) {
        var mh$ = jpdfium_doc_close.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_doc_close", doc);
            }
            mh$.invokeExact(doc);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
